--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="about-container">
         <!-- Image Section -->
         <div class="about-image">
-            <img src="/spcktest/about.png" alt="About Eagle Contractors">
+            <img src="about.png" alt="About Eagle Contractors">
           
                <div class="stats">
                 <div class="stat-item">
@@ -72,17 +72,17 @@
 
             <div class="about-features">
                 <div class="feature">
-                    <img src="/spcktest/qualityassurance.jpg" alt="Quality Assurance">
+                    <img src="qualityassurance.jpg" alt="Quality Assurance">
                     <h3>Quality Assurance</h3>
                     <p>We guarantee top-tier materials and craftsmanship in all our projects.</p>
                 </div>
                 <div class="feature">
-                    <img src="/spcktest/safetyteam.jpg" alt="Safety First">
+                    <img src="safetyteam.jpg" alt="Safety First">
                     <h3>Safety First</h3>
                     <p>We prioritize safety to ensure a secure environment for our clients and workers.</p>
                 </div>
                 <div class="feature">
-                    <img src="/spcktest/about.jpg" alt="Innovation">
+                    <img src="about.jpg" alt="Innovation">
                     <h3>Innovative Solutions</h3>
                     <p>Using the latest technologies, we deliver modern and efficient structures.</p>
                 </div>
@@ -99,7 +99,7 @@
         <!-- Service 1 -->
         <div class="service-card">
             <div class="service-icon">
-                <img src="/spcktest/construction.jpg" alt="Construction" />
+                <img src="construction.jpg" alt="Construction" />
             </div>
             <h3>Construction</h3>
             <p>We provide high-quality residential and commercial construction services tailored to meet your specific needs.</p>
@@ -109,7 +109,7 @@
         <!-- Service 2 -->
         <div class="service-card">
             <div class="service-icon">
-                <img src="/spcktest/design.jpg" alt="Design" />
+                <img src="design.jpg" alt="Design" />
             </div>
             <h3>Design</h3>
             <p>Our creative design team works with you to bring your visions to life with innovative and practical designs.</p>
@@ -119,7 +119,7 @@
         <!-- Service 3 -->
         <div class="service-card">
             <div class="service-icon">
-                <img src="/spcktest/renovation.jpg" alt="Renovation" />
+                <img src="renovation.jpg" alt="Renovation" />
             </div>
             <h3>Renovation</h3>
             <p>We specialize in home and office renovations to enhance your living and working spaces with modern touches.</p>
@@ -129,7 +129,7 @@
         <!-- Service 4 -->
         <div class="service-card">
             <div class="service-icon">
-                <img src="/spcktest/projectmanage.jpg" alt="Project Management" />
+                <img src="projectmanage.jpg" alt="Project Management" />
             </div>
             <h3>Project Management</h3>
             <p>Our expert project managers ensure your project runs smoothly, within budget, and on time.</p>
