--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
             <div class="about-features">
                 <div class="feature">
-                    <img src="qualityassurance.jpg" alt="Quality Assurance">
+                    <img src"pexels-azizico-28927794.jpg" alt="Quality Assurance">
                     <h3>Quality Assurance</h3>
                     <p>We guarantee top-tier materials and craftsmanship in all our projects.</p>
                 </div>
