--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
     <h2>Estate Projects</h2>
     <div class="popup-images">
       <img src="estate1.jpg" alt="">
-      <img src="estate 2.jpg" alt="">
-      <img src="estate 3.jpg" alt="">
+      <img src="pexels-quang-nguyen-vinh-222549-14024968.jpg" alt="">
+      <img src="pexels-pixabay-534220.jpg" alt="">
       <img src="pexels-pixabay-358636.jpg" alt="">
       
       </div>
