--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 <section id="testimonials" class="testimonials-section">
     <h2>What Our Clients Say</h2>
     <div class="testimonial">
-      <img src="image.jpg" alt="client 1">
+      <img src="-pe24ep.jpg" alt="client 1">
         <div class="rating">⭐⭐⭐⭐⭐</div>
         <p>"Eagle Contractors delivered our project on time with the highest quality standards. Highly recommended!"</p>
         <strong>- Duncan kaimenyi</strong>
