--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <ul
 
-                <li><a href="#home"><i class="fa fa-home"></i>Home </a></li>
+                <li><a href="#hoome"><i class="fa fa-home"></i>Home </a></li>
                 <li><a href="#about"> <i class="fa fa-info-circle"></i> About</a></li>
                 <li><a href="#services"><i class="fa fa-cogs"></i>Services</a></li>
                 <li><a href="#projects"><i class="fa fa-briefcase"></i>Projects</a></li>
@@ -150,7 +150,7 @@
 
 <div class="projects-container">
     <div class="project-card" data-category="commercial">
-        <img src="modern4.jpg" alt="Project 1">
+        <img src="pexels-curtis-adams-1694007-19227244.jpg" alt="Project 1">
         <h3>Modern Building Construction</h3>
         <p>We successfully completed a modern commercial building in Nairobi.</p>
         <div class="card-footer">
