--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </div>
     </div>
     <div class="project-card" data-category="roads">
-        <img src="Road.jpg" alt="Project 5">
+        <img src="pexels-daniel-reynaga-337914704-29073850.jpg" alt="Project 5">
         <h3>Road Construction</h3>
         <p>Completed a 10km road project improving infrastructure.</p>
         <div class="card-footer">
@@ -325,7 +325,7 @@
     <span class="close" onclick="closePopup('apartments-popup')">Back</span>
     <h2>Residential</h2>
     <div class="popup-images">
-      <img src="home2.jpg" alt="">
+      <img src="pexels-curtis-adams-1694007-19227244.jpg" alt="">
       <img src="home4.jpg" alt="">
       <img src="home 5.jpg" alt="">
       <img src="home7.jpg" alt="">
