--- a/index.html
+++ b/index.html
@@ -326,8 +326,8 @@
     <h2>Residential</h2>
     <div class="popup-images">
       <img src="pexels-curtis-adams-1694007-19227244.jpg" alt="">
-      <img src="home4.jpg" alt="">
-      <img src="home 5.jpg" alt="">
+      <img src="pexels-heyho-6580378.jpg" alt="">
+      <img src="pexels-heyho-5998041.jpg" alt="">
       <img src="home7.jpg" alt="">
     </div>
   </div>
