--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     <span class="close" onclick="closePopup('estate-popup')">Back</span>
     <h2>Estate Projects</h2>
     <div class="popup-images">
-      <img src="estate1.jpg" alt="">
+      <img src="pexels-heyho-7031596.jpg" alt="">
       <img src="pexels-quang-nguyen-vinh-222549-14024968.jpg" alt="">
       <img src="pexels-pixabay-534220.jpg" alt="">
       <img src="pexels-pixabay-358636.jpg" alt="">
