--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         </div>
     </div>
     <div class="project-card" data-category="residential">
-        <img src="home1.jpg" alt="Project 2">
+        <img src="pexels-pixabay-208736.jpg" alt="Project 2">
         <h3>Luxury Home Renovation</h3>
         <p>Renovation of a luxurious home with high-end interior finishes.</p>
         <div class="card-footer">
@@ -312,7 +312,7 @@
     <span class="close" onclick="closePopup('commercial-popup')">Back</span>
     <h2>Commercial Projects</h2>
     <div class="popup-images">
-      <img src="modern1.jpg" alt="">
+      <img src="pexels-jan-van-der-wolf-11680885-31375721.jpg" alt="">
       <img src="modern2.jpg" alt="">
       <img src="modern3.jpg" alt="">
       <img src="modern5.jpg" alt="">
