--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
     <h2>Commercial Projects</h2>
     <div class="popup-images">
       <img src="pexels-jan-van-der-wolf-11680885-31375721.jpg" alt="">
-      <img src="modern2.jpg" alt="">
+      <img src="pexels-willbillurban-28446629.jpg" alt="">
       <img src="modern3.jpg" alt="">
       <img src="modern5.jpg" alt="">
     </div>
